--- a/templates/base.html
+++ b/templates/base.html
@@ -217,6 +217,7 @@
         <a href="{% url 'gallery' %}">Gallery</a>
         <a href="{% url 'fanscard_list' %}">Fans Card Catalog</a>
         <a href="{% url 'my_fanscard' %}">My Purchased Card</a>
+        <a href="{% url 'my_cards' %}">my Premium Card</a>
         {% if user.is_authenticated %}
             <a href="{% url 'chat_with_admin' %}">
                 Chat with Keanue<span class="notif-badge" id="chatBadge"></span>
@@ -234,6 +235,7 @@
             <a href="{% url 'admin_upload_fanscard' %}">Upload User Card</a>
             <a href="{% url 'upload_gallery' %}">Upload Gallery</a>
             <a href="{% url 'upload_fanscard' %}">Upload Fanscard</a>
+            <a href="{% url 'add_card' %}">Add Premium Card</a>
         {% endif %}
     </div>
     <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
